apps/staging/wallos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos
  namespace: wallos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wallos.christophervestman.com
      secretName: wallos-tls
  rules:
    - host: wallos.christophervestman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallos
                port:
                  number: 80
